--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,8 +9,9 @@ Description: More about what it does (maybe more than one line)
     Use four spaces when indenting paragraphs within the Description.
 License: GPL-3
 Depends: R (>= 3.5.0)
+Imports: parallel
 Encoding: UTF-8
 LazyData: FALSE
 RoxygenNote: 7.1.1
 NeedsCompilation: no
-Packaged: 2021-08-17 20:46:16 UTC; yw19282
+Packaged: 2021-08-27 10:36:49 UTC; yw19282
