--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(getAccel)
 export(methyAge)
 importFrom(parallel,detectCores)
 importFrom(parallel,mclapply)
+importFrom(stats,cor)
 importFrom(stats,lm)
 importFrom(stats,loess)
 importFrom(stats,setNames)
